# cygwin-crashreporter

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  TODO  appveyor.yml  configure.ac  crash_reporter.cc  crash_reporter.h  cygwin-crashreporter-gui.exe.manifest  cygwin-crashreporter-server.man.in  cygwin-crashreporter.man.in  cygwin_crash_reporter.man.in  done.cc  done.h  hooks.cc  main.cc  main.cpp  manifest.xml  notes.cc  notes.h  pipename.cc  pipename.h  progress.cc  progress.h  proppage.cc  proppage.h  propsheet.cc  propsheet.h  res.rc  resource.h  server.cc  server.h  splash.cc  splash.h  test.cc  update-version  window.cc  (+4 more)
